# SS-Term-Project

./: Base64.h  CMakeLists.txt  Helper.h  IO.h  KeyConstants.h  KeybHook.h  Process.h  README.md  Regedit.h  SendMail.h  Timer.h  main.cpp  prepare.h  sockstatus.h
Decryptor/: Decryptor.cpp  main.cpp
